--- a/Order/styles.css
+++ b/Order/styles.css
@@ -1,27 +1,16 @@
 body {
-  font-family: "Lato", sans-serif;
+  font-family: Georgia, serif !important;
   background: #AF0909 !important;
 }
 
-img.logo{
-  height: 65%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-}
-
-.col-12{
-  background: #FFC100  !important;
-}
-
-img.user{
-  float: right;
-  margin-right: 4in;
+a.nav-link{
+  float: right !important;
+  font-size: 20px;
+  color: black;
 }
 
 h1{
-  text-align: center;
+  float: left;
 }
 
 button.btn{
@@ -39,4 +28,91 @@ button.btn{
 
 .logout{
   margin-top: 2in !important;
+}
+
+.orderForm{
+  background-color: burlywood;
+  width: 60% !important;
+  font-size: 1.5vw;
+  border-radius: 1vw;
+  float: left !important;
+  position: relative;
+  margin-left: 0.5in;
+  padding-left: 40px !important;
+  padding-top: 30px;
+}
+
+.payForm{
+  background-color: burlywood;
+  width: 45% !important;
+  font-size: 1.5vw;
+  border-radius: 1vw;
+  float: left !important;
+  position: relative;
+  padding-left: 40px !important;
+  padding-top: 30px;
+  padding: 2px;
+  padding-bottom: 10px;
+}
+
+h1{
+  color: #ffc100;
+  text-decoration: underline;
+  margin-left: 0.4in;
+}
+
+.orderForm select{
+  width: 50%;
+}
+
+.orderForm input[type="submit"]{
+  background-color: #ffc100;
+  border-radius: .5vw;
+}
+
+.orderForm input[type="submit"]:hover{
+  color: white;
+  background-color: #af0909;
+  transition: .5s;
+}
+
+.price{
+  font-size: 1vw;
+  color: white;
+}
+
+.payment{
+  color: white;
+}
+
+.payment input[type="submit"]{
+  background-color: #ffc100;
+  border-radius: .5vw;
+}
+
+.payment input[type="submit"]:hover{
+  color: white;
+  background-color: #af0909;
+  transition: .5s;
+}
+
+.payment{
+ 
+  margin-right: 5in !important;
+  margin-top: 0;
+  font-size: 20px;
+
+}
+
+.container{
+  background-image: url("assets/pop.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+table.table{
+  display: block;
+  border-radius: 20px !important;
+  font-size: 20px;
 }
