--- a/inventory/styles.css
+++ b/inventory/styles.css
@@ -15,28 +15,70 @@ img.logo{
   background: #FFC100  !important;
 }
 
-img.user{
-  float: right;
-  margin-right: 4in;
-}
-
 h1{
   text-align: center;
+  font-size: 50%;
+  font-family: "Lato", sans-serif; 
+  color: #FFC100;
+  margin-top: 100px;
 }
 
 button.btn{
   width: 2in;
-  border-radius: 20px;
-  margin: 20px;
+  padding: 5px;
+  border-radius: 50px;
+  margin: 10px;
+  margin-left: 10px;
 }
 
 .dashbtn{
+  width: 4px;
   position: absolute;
-  margin-top: 2in !important;
-  margin-left: 4in;
+  margin-top: 1in !important;
+  margin-left: 5in;
   margin-right: auto;
+  border-radius: 20px;
 }
 
-.logout{
-  margin-top: 2in !important;
+.logoutbtn{
+  margin-top: 10px !important;
+  margin-left: 5px;
+}
+
+.navbar {
+  margin-left: 25;
+  width: 100%;
+  background-color: #FFC100  !important;
+  overflow: auto;
+}
+
+.navbar a {
+  float: left;
+  padding: 20px;
+  color:#AF0909;;
+  text-decoration: none;
+  font-size: 25px;
+  margin-left: 30px;
+}
+
+.navbar a:hover {
+  background-color: #FFC100  !important;
+}
+
+@media screen and (max-width: 500px) {
+  .navbar a {
+    float: none;
+    display: block;
+  }
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 15%;
+  width: 100%;
+  background-color:  #FFC100;
+  color: white;
+  text-align: center;
 }
