--- a/POS/styles.css
+++ b/POS/styles.css
@@ -1,18 +1,26 @@
 body {
   font-family: "Lato", sans-serif;
-  background: #AF0909 !important;
+  background: #8F111D !important;
 }
 
-img.logo{
-  height: 65%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
+.navbar a {
+  float: left;
+  padding: 4px;
+  color:#AF0909;;
+  text-decoration: none;
+  font-size: 25px;
+  margin-left: 30px;
 }
 
-.col-12{
-  background: #FFC100  !important;
+.navbar a:hover {
+  background-color: #FFC100  !important;
+}
+
+@media screen and (min-width: 500px) {
+  .navbar a {
+    float: none;
+    display: block;
+  }
 }
 
 img.user{
@@ -21,22 +29,38 @@ img.user{
 }
 
 h1{
-  text-align: center;
+  text-align: left;
+  font-size: 100%;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: #FFC100;
+  text-decoration: underline;
+  margin: 0;
+  position:fixed;
+  top: 25%;
+  left: 35%;
+  transform: translate(-25%, -25%);
+
+}
+
+.logout.btn{
+  font-size: 75%;
+  width: 150px;
+  border-radius: 20px;
+  margin: 15px;
+  position: right;
+  right: 30%;
+  transform: translate(-0%, 10%);
 }
 
 button.btn{
-  width: 2in;
+  width: 200px;
   border-radius: 20px;
   margin: 20px;
 }
 
 .dashbtn{
-  position: absolute;
+  position: fixed;
   margin-top: 2in !important;
   margin-left: 4in;
   margin-right: auto;
-}
-
-.logout{
-  margin-top: 2in !important;
 }
